--- a/app/quote.css
+++ b/app/quote.css
@@ -61,82 +61,9 @@ body {
 }
 
 #main {
-	display: none;
-}
-
-#quote-list {
-	margin: 10px 0;
-	padding: 0;
-	list-style: none;
-}
-
-#quote-list li {
+	margin: 10px 10px;
 	padding: 18px 20px 18px 0;
 	position: relative;
-	font-size: 24px;
-	border-bottom: 1px solid #cccccc;
-}
-
-#quote-list li:last-child {
-	border-bottom: none;
-}
-
-#quote-list li.done label {
-	color: #777777;
-	text-decoration: line-through;
-}
-
-#quote-list .destroy {
-	position: absolute;
-	right: 5px;
-	top: 20px;
-	display: none;
-	cursor: pointer;
-	width: 20px;
-	height: 20px;
-	background: url(destroy.png) no-repeat;
-}
-
-#quote-list li:hover .destroy {
-  	display: block;
-}
-
-#quote-list .destroy:hover {
-  	background-position: 0 -20px;
-}
-
-#quote-list li.editing {
-	border-bottom: none;
-	margin-top: -1px;
-	padding: 0;
-}
-
-#quote-list li.editing:last-child {
-	margin-bottom: -1px;
-}
-
-#quote-list li.editing .edit {
-	display: block;
-	width: 444px;
-	padding: 13px 15px 14px 20px;
-	margin: 0;
-}
-
-#quote-list li.editing .view {
-	display: none;
-}
-
-#quote-list li .view .text {
-	word-break: break-word;
-}
-
-#quote-list li .view .author {
-	word-break: break-word;
-	font-weight: bold;
-}
-
-#quote-list li .edit {
-	display: none;
 }
 
 #quoteapp footer {
@@ -155,47 +82,6 @@ body {
 	border-radius: 0 0 5px 5px;
 }
 
-#clear-quotes {
-	float: right;
-	line-height: 20px;
-	text-decoration: none;
-	background: rgba(0, 0, 0, 0.1);
-	color: #555555;
-	font-size: 11px;
-	margin-top: 8px;
-	margin-bottom: 8px;
-	padding: 0 10px 1px;
-	cursor: pointer;
-	-webkit-border-radius: 12px;
-	-moz-border-radius: 12px;
-	-ms-border-radius: 12px;
-	-o-border-radius: 12px;
-	border-radius: 12px;
-	-webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 0 0;
-	-moz-box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 0 0;
-	-ms-box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 0 0;
-	-o-box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 0 0;
-	box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 0 0;
-}
-
-#clear-quotes:hover {
-	background: rgba(0, 0, 0, 0.15);
-	-webkit-box-shadow: rgba(0, 0, 0, 0.3) 0 -1px 0 0;
-	-moz-box-shadow: rgba(0, 0, 0, 0.3) 0 -1px 0 0;
-	-ms-box-shadow: rgba(0, 0, 0, 0.3) 0 -1px 0 0;
-	-o-box-shadow: rgba(0, 0, 0, 0.3) 0 -1px 0 0;
-	box-shadow: rgba(0, 0, 0, 0.3) 0 -1px 0 0;
-}
-
-#clear-quotes:active {
-	position: relative;
-	top: 1px;
-}
-
-#quote-count span {
-	font-weight: bold;
-}
-
 #instructions {
 	margin: 10px auto;
 	color: #777777;
@@ -203,17 +89,9 @@ body {
 	text-align: center;
 }
 
-#instructions a {
-	color: #336699;
-}
-
 #credits {
 	margin: 30px auto;
 	color: #999;
 	text-shadow: rgba(255, 255, 255, 0.8) 0 1px 0;
 	text-align: center;
-}
-
-#credits a {
-	color: #888;
 }
